# snn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  readme.md  run.sh
LeNet-5/: LeNet-5.txt  lenet5.py
examples/LeNet-5/: CMakeLists.txt  lenet-5.cpp
examples/addOP/: CMakeLists.txt  main.cpp  pow.cpp  pow.h  pow.txt
examples/hg_test/: hg_test.cpp  run.sh
examples/hourglass/: CMakeLists.txt  hourglass.cpp
examples/resnet50/: CMakeLists.txt  resnet50.cpp
examples/resnet50/data/: labels.txt  resnet50.txt
examples/resnet50_test/: resnet50.cpp  run.sh
examples/tmp/: global.h  net.py  time.h  write_config.py
examples/tmp/resnet50/: config.py  dst.py  inp.npy  model.py  tmp.py
hourglass/: hg.txt
py-tools/: write_tensor.py
src/: adaptive_avgpool.cpp  adaptive_avgpool.h  addition.cpp  addition.h  bn.cpp  bn.h  convolution.cpp  convolution.h  global.h  hg_test.cpp  hourglass.cpp  image.cpp  image.h  lenet-5.cpp  linear.cpp  linear.h  maxpool.cpp  maxpool.h  module.cpp  module.h  net.cpp  net.h  parse.cpp  parse.h  relu.cpp  relu.h  reshape.cpp  reshape.h  storage.cpp  storage.h  tensor.cpp  tensor.h  time.cpp  upsample.cpp  upsample.h
workspace/conv/: conv_gemm.cpp  io.cpp  naive_convolution.cpp  run.sh  test.py
workspace/pooling/: pooling.cpp  run.sh  test.py
workspace/upsample/: io.h  random.cpp  random.h  run.sh  test.py  upsample.cpp
